--- a/.github/workflows/build-pdf.yml
+++ b/.github/workflows/build-pdf.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - name: Git installation
-        run: apt-get -qq update && apt-get -y install git
+        run: sudo apt-get -qq update && apt-get -y install git
 
       - name: LaTeX installation
-        run: apt-get -qq update && apt-get install -y --no-install-recommends latexmk texlive-fonts-extra texlive-fonts-recommended texlive-latex-base texlive-latex-extra texlive-latex-recommended texlive-luatex texlive-xetex texlive-pictures texlive-lang-french texlive-bibtex-extra biber lmodern fonts-font-awesome
+        run: sudo apt-get -qq update && apt-get install -y --no-install-recommends latexmk texlive-fonts-extra texlive-fonts-recommended texlive-latex-base texlive-latex-extra texlive-latex-recommended texlive-luatex texlive-xetex texlive-pictures texlive-lang-french texlive-bibtex-extra biber lmodern fonts-font-awesome
 
       - name: Checkout code
         uses: actions/checkout@v2
